--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.1",
   "publisher": "ultram4rine",
   "license": "MIT",
+  "icon": "images/icon.png",
   "author": {
     "name": "ultram4rine",
     "email": "ultramarine730@gmail.com"
