--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
 
-sudo: false
+os:
+  - linux
+  - osx
 
 node_js:
-  - "node"
+  - node
 
 before_install:
   - if [ $TRAVIS_OS_NAME == "linux" ]; then
