--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,10 @@ os:
   - linux
   - osx
 
+dist: xenial
+
 node_js:
   - node
-
-before_install:
-  - if [ $TRAVIS_OS_NAME == "linux" ]; then
-    export CXX="g++-4.9" CC="gcc-4.9" DISPLAY=:99.0;
-    sh -e /etc/init.d/xvfb start;
-    sleep 3;
-    fi
 
 install:
   - npm install
