--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,15 @@ os:
 
 dist: xenial
 
-addons:
-  apt:
-    packages:
-      - libxss1
-
 node_js:
   - node
 
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then apt-get update          ; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then apt-get install libxss1 ; fi
+  - if [ $TRAVIS_OS_NAME == "linux" ]; then
+    export CXX="g++-4.9" CC="gcc-4.9" DISPLAY=:99.0;
+    sh -e /etc/init.d/xvfb start;
+    sleep 3;
+    fi
 
 install:
   - npm install
