swapped md and txt extensions

--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
           "description": "Set license file extension",
           "enum": [
             "",
-            "txt",
-            "md"
+            "md",
+            "txt"
           ]
         }
       }
