--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ultram4rine/vscode-choosealicense.git"
+    "url": "https://github.com/ultram4rine/vscode-choosealicense"
+  },
+  "bugs": {
+    "url": "https://github.com/ultram4rine/vscode-choosealicense/issues"
   },
   "engines": {
     "vscode": "^1.43.0"
