--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "name": "ultram4rine",
     "email": "ultramarine730@gmail.com"
   },
+  "homepage": "https://github.com/ultram4rine/vscode-choosealicense",
   "repository": {
     "type": "git",
     "url": "https://github.com/ultram4rine/vscode-choosealicense"
