--- a/package.json
+++ b/package.json
@@ -93,8 +93,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
-    "graphql-request": "^1.8.2",
-    "web-request": "^1.0.7"
+    "graphql-request": "^1.8.2"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
