--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
+    "graphql": "^15.3.0",
     "graphql-request": "^3.0.0"
   },
   "devDependencies": {
