--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "glob": "^7.1.6",
     "mocha": "^8.2.0",
     "typescript": "^4.0.5",
+    "vsce": "^1.81.1",
     "vscode-test": "^1.4.1"
   }
 }
