--- a/package.json
+++ b/package.json
@@ -31,6 +31,14 @@
     "*"
   ],
   "main": "./out/extension.js",
+  "scripts": {
+    "vscode:prepublish": "yarn run compile",
+    "compile": "rollup -c",
+    "lint": "eslint src --ext ts",
+    "watch": "rollup -c -w",
+    "pretest": "yarn run compile && yarn run lint",
+    "test": "node ./out/test/runTest.js"
+  },
   "contributes": {
     "commands": [
       {
@@ -89,28 +97,28 @@
       }
     }
   },
-  "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "lint": "eslint src --ext ts",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js"
-  },
   "dependencies": {
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.7",
     "@types/vscode": "^1.43.0",
-    "@typescript-eslint/parser": "^4.7.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
+    "rollup": "^2.33.2",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-multi-input": "^1.1.1",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.0.5",
     "vsce": "^1.81.1",
     "vscode-test": "^1.4.1"
