--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     }
   },
   "dependencies": {
+    "@octokit/graphql": "^4.5.8",
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0"
   },
