--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "module": "ES2015",
-    "target": "es6",
+    "moduleResolution": "Node",
+    "target": "ES2019",
+    "lib": ["ES2019"],
     "outDir": "out",
-    "lib": ["es6"],
     "sourceMap": true,
     "rootDir": "src",
     "strict": true /* enable all strict type-checking options */
