--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ES2015",
+    "module": "CommonJS",
     "moduleResolution": "Node",
     "target": "ES2019",
     "lib": ["ES2019"],
