--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "license"
   ],
   "activationEvents": [
-    "*"
+    "onStartupFinished"
   ],
   "main": "./out/extension.js",
   "scripts": {
