--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
     }
   },
   "dependencies": {
-    "@octokit/graphql": "^4.6.4"
+    "@octokit/graphql": "^4.6.4",
+    "@octokit/request": "^5.6.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.1",
