--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "commands": [
       {
         "category": "License",
-        "command": "license.choose",
+        "command": "license.chooseLicense",
         "title": "Choose license",
         "description": "Choose a license to create."
       },
