--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
+      - name: Install vsce
+        run: npm install -g vsce
       - name: Install dependencies
         run: yarn install
       - name: Publish
