--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "main": "./out/extension.js",
   "scripts": {
     "vscode:prepublish": "yarn run compile",
+    "vscode:publish": "vsce publish --yarn -p '$VSCE_PAT'",
     "compile": "rimraf ./out && rollup -c",
     "lint": "eslint src --ext ts",
     "watch": "rimraf ./out && rollup -c -w",
