--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1.5
         with:
-          run: yarn nyc
+          run: yarn coverage
       - name: Coverage
         uses: codecov/codecov-action@v2
 
