--- a/package.json
+++ b/package.json
@@ -152,8 +152,8 @@
     }
   },
   "dependencies": {
-    "@octokit/request": "^5.6.2",
-    "@octokit/request-error": "^2.1.0"
+    "@octokit/request-error": "^2.1.0",
+    "@octokit/rest": "^18.12.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
