--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
       "description": "License"
     },
     {
-      "url": "https://img.shields.io/github/workflow/status/ultram4rine/vscode-choosealicense/CI?style=flat-square",
+      "url": "https://img.shields.io/github/workflow/status/ultram4rine/vscode-choosealicense/CI?logo=github&style=flat-square",
       "href": "https://github.com/ultram4rine/vscode-choosealicense/actions?query=workflow%3ACI",
       "description": "GitHub Workflow Status"
     },
     {
-      "url": "https://img.shields.io/codecov/c/github/ultram4rine/vscode-choosealicense?style=flat-square",
+      "url": "https://img.shields.io/codecov/c/github/ultram4rine/vscode-choosealicense?logo=codecov&style=flat-square",
       "href": "https://codecov.io/gh/ultram4rine/vscode-choosealicense",
       "description": "Codecov"
     }
