--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,2 +1,8 @@
 ignore:
-  - src/test/**/*
+  - src/test/*
+coverage:
+  status:
+    project:
+      default:
+        target: 0%
+        threshold: 0%
