--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,19 +1,21 @@
-.idea/**
-.vscode/**
-.vscode-test/**
-coverage/**
-out/test/**
-src/**
-node_modules/**
-.gitignore
-**/tsconfig.json
-**/.eslintrc.json
+.github/
+.idea/
+.vscode/
+.vscode-test/
+coverage/
+node_modules/
+out/test/
+src/
+
 **/*.map
 **/*.ts
+**/*.vsix
 
-.github/**
 images/screenshot*
-
 .codecov.yml
+.eslintrc.json
+.gitignore
 .ncurc.json
+.nycrc.json
 rollup.config.js
+tsconfig.json
