--- a/package.json
+++ b/package.json
@@ -54,14 +54,16 @@
   ],
   "main": "./out/extension.js",
   "scripts": {
+    "clean": "rimraf -rf coverage out *.vsix",
     "lint": "eslint src --ext ts",
-    "test-compile": "rimraf ./out && tsc -p ./",
-    "test-watch": "rimraf ./out && tsc -watch -p ./",
+    "test-compile": "yarn run clean && tsc -p ./",
+    "test-watch": "yarn run clean && tsc -watch -p ./",
     "pretest": "yarn run lint && yarn run test-compile",
     "test": "node ./out/test/runTest.js",
     "coverage": "rimraf ./coverage && c8 yarn test",
-    "compile": "yarn run lint && rimraf ./out && rollup -c",
-    "watch": "rimraf ./out && rollup -c -w",
+    "esbuild": "esbuild ./src/extension.ts --bundle --external:vscode --platform=node --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --target=es2017 --minify --outfile=./out/extension.js",
+    "compile": "yarn run lint && yarn run clean && yarn run esbuild",
+    "watch": "yarn run clean && yarn run esbuild --watch",
     "prepackage": "yarn run compile",
     "package": "vsce package --yarn",
     "vscode:publish": "vsce publish --yarn -p '$VSCE_PAT' -i"
@@ -157,10 +159,6 @@
     "@octokit/rest": "^18.12.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-typescript": "^8.3.2",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
@@ -169,12 +167,11 @@
     "@typescript-eslint/parser": "^5.20.0",
     "@vscode/test-electron": "^2.1.3",
     "c8": "^7.11.2",
+    "esbuild": "^0.14.38",
     "eslint": "^8.13.0",
     "glob": "^8.0.1",
     "mocha": "^9.2.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.70.2",
-    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.6.3",
     "vsce": "^2.7.0"
   }
