--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "watch": "yarn run clean && yarn run esbuild --watch",
     "prepackage": "yarn run compile",
     "package": "vsce package --yarn",
-    "vscode:publish": "vsce publish --yarn -p '$VSCE_PAT' -i"
+    "vscode:publish": "vsce publish --yarn -p $VSCE_PAT -i"
   },
   "contributes": {
     "commands": [
