--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -75,10 +75,15 @@ jobs:
         with:
           name: vsix
 
-      - name: Publish
+      - name: Publish to Visual Studio Marketplace
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
-        run: yarn vscode:publish vscode-choosealicense-*.vsix
+        run: yarn publish:vsce vscode-choosealicense-*.vsix
+
+      - name: Publish to Open VSX Registry
+        env:
+          OVSX_PAT: ${{ secrets.OVSX_PAT }}
+        run: yarn publish:ovsx vscode-choosealicense-*.vsix
 
       - name: Create release
         uses: softprops/action-gh-release@v1
