--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "watch": "yarn run clean && yarn run esbuild --watch",
     "prepackage": "yarn run compile",
     "package": "vsce package --yarn",
-    "vscode:publish": "vsce publish --yarn -p $VSCE_PAT -i"
+    "publish:vsce": "vsce publish --yarn -p $VSCE_PAT -i",
+    "publish:ovsx": "ovsx publish -p $OVSX_PAT"
   },
   "contributes": {
     "commands": [
@@ -171,6 +172,7 @@
     "eslint": "^8.13.0",
     "glob": "^8.0.1",
     "mocha": "^9.2.2",
+    "ovsx": "^0.3.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.3",
     "vsce": "^2.7.0"
