--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "clean": "rimraf -rf coverage out *.vsix",
     "compile": "yarn run lint && yarn run clean && yarn run esbuild",
-    "coverage": "rimraf ./coverage && c8 yarn test",
+    "coverage": "rimraf ./coverage && c8 --config .c8rc.json --all yarn test",
     "esbuild": "esbuild ./src/extension.ts --bundle --external:vscode --platform=node --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --target=es2017 --minify --outfile=./out/extension.js",
     "lint": "eslint src --ext ts",
     "prepackage": "yarn run compile",
@@ -195,5 +195,11 @@
   "galleryBanner": {
     "color": "#212121",
     "theme": "dark"
+  },
+  "__metadata": {
+    "id": "3f3c77bc-5721-4a52-b693-e4049ae2256d",
+    "publisherDisplayName": "ultram4rine",
+    "publisherId": "602999bc-a640-4a1e-a9f4-4d2f2ea07c0f",
+    "isPreReleaseVersion": false
   }
 }
