--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -60,32 +60,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Create release body file
-        run: |
-          awk -v ver=$(grep 'version' package.json | awk -F: '{ print $2 }' | tr -d \ \",) '/^#+ \[/ { if (p) { exit }; if ($2 == "["ver"]") { p=1; next } } p && NF' CHANGELOG.md > changes.txt
-
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: vsix
 
       - name: Publish to Visual Studio Marketplace
-        env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
-        run: yarn publish:vsce vscode-choosealicense-*.vsix
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.VSCE_PAT }}
+          extensionFile: vscode-choosealicense-*.vsix
+          registryUrl: https://marketplace.visualstudio.com
 
       - name: Publish to Open VSX Registry
-        env:
-          OVSX_PAT: ${{ secrets.OVSX_PAT }}
-        run: yarn publish:ovsx vscode-choosealicense-*.vsix
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.OVSX_PAT }}
+          extensionFile: vscode-choosealicense-*.vsix
+          registryUrl: https://open-vsx.org
+
+      - name: Create release body file
+        run: |
+          awk -v ver=$(grep 'version' package.json | awk -F: '{ print $2 }' | tr -d \ \",) '/^#+ \[/ { if (p) { exit }; if ($2 == "["ver"]") { p=1; next } } p && NF' CHANGELOG.md > changes.txt
 
       - name: Create release
         uses: softprops/action-gh-release@v1
