--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Run tests and make coverage
         uses: GabrielBB/xvfb-action@v1.6
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           run: yarn coverage
 
